REGRESSION(284324@main): ASSERTION FAILED: bool(*this) in Markable::operator*() under WebKit::ServiceWorkerFetchTask::cancelFromClient https://bugs.webkit.org/show_bug.cgi?id=280563

Reviewed by Chris Dumez.

In ServiceWorkerFetchTask::cancelFromClient, if
m_isLoadingFromPreloader is false, m_serviceWorkerIdentifier is empty.
We shouldn't do *m_serviceWorkerIdentifier.
Call cancelPreloadIfNecessary if m_isLoadingFromPreloader.

* LayoutTests/platform/win/TestExpectations:
* Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
(WebKit::ServiceWorkerFetchTask::cancelFromClient):

Canonical link: https://commits.webkit.org/284441@main